--- a/ASCT_Razor_Page/Pages/TechnicianUI.cshtml
+++ b/ASCT_Razor_Page/Pages/TechnicianUI.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/"
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
@@ -25,7 +25,7 @@
 <body>
     <h1 id="title-alaska" style="text-align: center;">Alaska Airlines Software Configuration Tool</h1>
     <br>
-    <div class="container">
+    <div class="container modified_container">
         <label>
             <input type="radio" name="demo" class="card-input-element" id="demo1">
             <div class="card card-body bg-light d-flex flex-row justify-content-between align-items-center">
@@ -105,5 +105,6 @@
             </tbody>
         </table>
     </div>
+    &nbsp;
 </body>
 </html>
