Changes to font size and layout fix

--- a/ASCT_Razor_Page/Pages/Shared/_Layout.cshtml
+++ b/ASCT_Razor_Page/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
+            <div class="container" style="font-size:16px">
                 <a class="navbar-brand" asp-area="" asp-page="/TechnicianUI">ASCT_Razor_Page</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -21,7 +21,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/TechnicianUI">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/TechnicianUI">TechnicianUI</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
@@ -38,7 +38,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="container" style="font-size:16px">
             &copy; 2020 - ASCT_Razor_Page - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
