--- a/ASCT_Razor_Page/Pages/TechnicianUI.cshtml
+++ b/ASCT_Razor_Page/Pages/TechnicianUI.cshtml
@@ -9,7 +9,7 @@
 <html ng-app="app" ng-controller="MyController" lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Alaska Airlines Software Configuration Tool</title>
+    <title>Technician Portal</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
@@ -23,7 +23,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    <h1 id="title-alaska" style="text-align: center;">Alaska Airlines Software Configuration Tool</h1>
+    <h1 id="title-alaska" style="text-align: center;">Alaska Airline Software Configuration Technician Portal</h1>
     <br>
     <div class="container modified_container">
         <label>
