--- a/ASCT_Razor_Page/Pages/TechnicianUI.cshtml
+++ b/ASCT_Razor_Page/Pages/TechnicianUI.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Technician Portal";
 }
 
 <!DOCTYPE html>
@@ -32,7 +32,7 @@
                 Boeing
             </div>
         </label>
-        <label class="mt-3">
+        <label>
             <input type="radio" name="demo" class="card-input-element" value="demo2">
             <div class="card card-body bg-light d-flex flex-row justify-content-between align-items-center">
                 Airbus
