added on functionality to the .NET
User's inputs are identified as Aircraft objects and recorded inside the .cshtml.cs files

--- a/ASCT_Razor_Page/Pages/AdminUI.cshtml
+++ b/ASCT_Razor_Page/Pages/AdminUI.cshtml
@@ -27,7 +27,7 @@
             <div class="form-group">
                 <!-- Design choice; label or no label for tail number input?-->
                 <label for="tail-number">Tail Number</label>
-                <input type="text" class="form-control" id="tail-number" placeholder="ex: 224AS">
+                <input type="text" asp-for="Tail_Number" class="form-control" id="tail-number" placeholder="ex: 224AS">
             </div>
         </form>
     </div>
@@ -38,7 +38,7 @@
             <div class="form-group">
                 <!-- Design choice; label or no label for tail number input?-->
                 <label for="LRU-Name">LRU Name</label>
-                <input type="text" class="form-control" id="LRU-name" placeholder="ex: Attendant Control Panel">
+                <input type="text" asp-for="LRU_Name" class="form-control" id="LRU-name" placeholder="ex: Attendant Control Panel">
             </div>
         </form>
     </div>
@@ -49,7 +49,7 @@
             <div class="form-group">
                 <!-- Design choice; label or no label for tail number input?-->
                 <label for="system-name">LRU P/N</label>
-                <input type="text" class="form-control" id="LRU-part-number" placeholder="ex: 115E1670G18">
+                <input type="text" asp-for="LRU_Part_Number" class="form-control" id="LRU-part-number" placeholder="ex: 115E1670G18">
             </div>
         </form>
     </div>
@@ -60,7 +60,7 @@
             <div class="form-group">
                 <!-- Design choice; label or no label for tail number input?-->
                 <label for="system-name">S/W Name</label>
-                <input type="text" class="form-control" id="software-name" placeholder="ex: OPS">
+                <input type="text" asp-for="Software_Name" class="form-control" id="software-name" placeholder="ex: OPS">
             </div>
         </form>
     </div>
@@ -71,7 +71,7 @@
             <div class="form-group">
                 <!-- Design choice; label or no label for tail number input?-->
                 <label for="system-name">S/W P/N</label>
-                <input type="text" class="form-control" id="software-part-number" placeholder="ex: 2316BPS03P05">
+                <input type="text" asp-for="Software_Number" class="form-control" id="software-part-number" placeholder="ex: 2316BPS03P05">
             </div>
         </form>
     </div>
@@ -81,6 +81,7 @@
         <form>
             <div class="form-group">
                 <!-- Design choice; label or no label for tail number input?-->
+                <!-- Can be removed since it's redundant with Software Name -->>
                 <label for="system-name">System Name</label>
                 <input type="text" class="form-control" id="system-name" placeholder="ex: FMC">
             </div>
