--- a/ASCT_Razor_Page/Pages/TechnicianUI.cshtml
+++ b/ASCT_Razor_Page/Pages/TechnicianUI.cshtml
@@ -45,7 +45,7 @@
             <div class="form-group">
                 <!-- Design choice; label or no label for tail number input?-->
                 <label for="tail-number">Tail Number</label>
-                <input type="text" class="form-control" id="tail-number" placeholder="ex: 224AS">
+                <input type="text" asp-for="Aircraft.Tail_Number" class="form-control" id="tail-number" placeholder="ex: 224AS">
             </div>
         </form>
     </div>
@@ -71,6 +71,12 @@
         <table class="table">
 
             <tbody>
+                <tr>
+                    <th scope="row">Tail Number</th>
+                    <!--change later with the get method updeted-->>
+                    <td>@Model.TailNumber</td>
+
+                </tr>
                 <tr>
                     <th scope="row">LRU Name</th>
                     <td>FMC</td>
