--- a/ASCT_Razor_Page/Pages/AdminUI.cshtml
+++ b/ASCT_Razor_Page/Pages/AdminUI.cshtml
@@ -27,7 +27,7 @@
             <div class="form-group">
                 <!-- Design choice; label or no label for tail number input?-->
                 <label for="tail-number">Tail Number</label>
-                <input type="text" asp-for="Tail_Number" class="form-control" id="tail-number" placeholder="ex: 224AS">
+                <input type="text" asp-for="TAIL_NUM" class="form-control" id="tail-number" placeholder="ex: 224AS">
             </div>
         </form>
     </div>
@@ -38,7 +38,7 @@
             <div class="form-group">
                 <!-- Design choice; label or no label for tail number input?-->
                 <label for="LRU-Name">LRU Name</label>
-                <input type="text" asp-for="LRU_Name" class="form-control" id="LRU-name" placeholder="ex: Attendant Control Panel">
+                <input type="text" asp-for="LRU_NAME" class="form-control" id="LRU-name" placeholder="ex: Attendant Control Panel">
             </div>
         </form>
     </div>
