--- a/ASCT_Razor_Page/Pages/TechnicianUI.cshtml
+++ b/ASCT_Razor_Page/Pages/TechnicianUI.cshtml
@@ -45,7 +45,7 @@
             <div class="form-group">
                 <!-- Design choice; label or no label for tail number input?-->
                 <label for="tail-number">Tail Number</label>
-                <input type="text" asp-for="Tail_Number" class="form-control" id="tail-number" placeholder="ex: 224AS">
+                <input type="text" asp-for="Unit.Tail_Number" class="form-control" id="tail-number" placeholder="ex: 224AS">
             </div>
         </form>
     </div>
